# zMultilogue

./: .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  index.html
.github/workflows/: build.yml  mkdocs.yml  on-push.yml  release.yml
_externals/: zMultilogue.d
docs/: mkdocs.yml  requirements.txt
docs/docs/: .pages  getting-started.md  index.md
docs/docs/scripting/: .pages  camera.md  index.md
docs/docs/scripting/dialogs/: .pages  auto-interface.md  concepts.md  manual-interface.md
docs/docs/stylesheets/: extra.css
getting-started/: index.html
scripting/: index.html
scripting/camera/: index.html
scripting/dialogs/auto-interface/: index.html
scripting/dialogs/concepts/: index.html
scripting/dialogs/manual-interface/: index.html
search/: search_index.json
src/: Plugin.cpp  Plugin.hpp
src/Gothic/: Externals.hpp  Hooks.hpp  Lifecycle.hpp  Options.hpp  zMul_Camera.hpp  zMul_Distance.hpp  zMul_Helper.hpp  zMultilogue.hpp
src/NH/: Logger.cpp  Logger.h
userapi/: oCInformationManager.inl  oCNpc.inl
vdf/: script.vs.in  vdf.cmake  vdf.cmake.in
vdf/System/Autorun/: ZS_Multilogue.d
